# APC524_spin

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: Advanced_fitting_demo.py  demo.py  fitting_demo.py  wolff_basic_demo.py  wolff_with_estimator_demo.py
src/apc524_spin/: __init__.py  est_param.py
src/wolff_update/: wolff_estimator.py
src/xy3d_wolff/: __init__.py  core.py  plotter.py  plotting.py  simulation.py  wolff.py
tests/: Wolff_update.py  test_analysis_and_plot.py  test_core.py  test_lattice.py  test_plotter.py  test_simulation.py  test_wolff.py  test_wolff_and_sim.py
